--- a/notebooks/process.ipynb
+++ b/notebooks/process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bcbfce66",
+   "id": "203d9e96",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b4db165",
+   "id": "fd81702f",
    "metadata": {},
    "source": [
     "## Load data"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "15b466bb",
+   "id": "92d70c55",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f46bb023",
+   "id": "6fa588cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7715a8f9",
+   "id": "c65c0d30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "40305163",
+   "id": "c9941e9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e3d2ec9",
+   "id": "b1df25ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "97e443be",
+   "id": "26e674f8",
    "metadata": {},
    "outputs": [
     {
@@ -152,6 +152,7 @@
        "      <th>society</th>\n",
        "      <th>life</th>\n",
        "      <th>health</th>\n",
+       "      <th>Parent</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -173,6 +174,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -192,6 +194,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -211,6 +214,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -230,6 +234,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -249,6 +254,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -262,12 +268,19 @@
        "3     2 2021-01-06  Learn/Personal Development    None        1.0      1.0   \n",
        "4     2 2021-01-06               Do/Algorithms    None        NaN      2.0   \n",
        "\n",
-       "   learn     do  career  green    red  personal  hobby  society   life  health  \n",
-       "0   True  False    True   True  False     False  False    False  False   False  \n",
-       "1   True  False    True   True  False     False  False    False  False   False  \n",
-       "2   True  False   False   True  False     False   True    False  False   False  \n",
-       "3   True  False   False  False  False      True  False    False  False   False  \n",
-       "4  False   True    True   True  False     False  False    False  False   False  "
+       "   learn     do  career  green    red  personal  hobby  society   life  \\\n",
+       "0   True  False    True   True  False     False  False    False  False   \n",
+       "1   True  False    True   True  False     False  False    False  False   \n",
+       "2   True  False   False   True  False     False   True    False  False   \n",
+       "3   True  False   False  False  False      True  False    False  False   \n",
+       "4  False   True    True   True  False     False  False    False  False   \n",
+       "\n",
+       "   health Parent  \n",
+       "0   False         \n",
+       "1   False         \n",
+       "2   False         \n",
+       "3   False         \n",
+       "4   False         "
       ]
      },
      "execution_count": 6,
@@ -281,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f8d4bb",
+   "id": "5c3773d9",
    "metadata": {},
    "source": [
     "## Process data"
@@ -290,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "63cdc607",
+   "id": "25a822dd",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbaf66f5",
+   "id": "7638d5d5",
    "metadata": {},
    "source": [
     "## Get current week"
@@ -442,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "498d9d5d",
+   "id": "2ec2d6a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "200d95ce",
+   "id": "b349660b",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d3dc29c1",
+   "id": "becd8b7a",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e7ad679",
+   "id": "8cacf879",
    "metadata": {},
    "source": [
     "## Get sliding window"
@@ -560,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7353da4f",
+   "id": "238b8003",
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c06720b",
+   "id": "73773821",
    "metadata": {},
    "source": [
     "## Get zone"
@@ -678,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f89a881c",
+   "id": "125fcdc1",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b6c35cdc",
+   "id": "a59063fe",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f79a8004",
+   "id": "761bd411",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "46709077",
+   "id": "c8275630",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68b3c711",
+   "id": "b7047db9",
    "metadata": {},
    "source": [
     "## Suggested action"
@@ -770,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "20ae169d",
+   "id": "3860b698",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "81190a3d",
+   "id": "40da6d10",
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "c99dfe14",
+   "id": "ae0b43a8",
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "89a7d7ef",
+   "id": "3919feeb",
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d3529ab7",
+   "id": "ea34fdf9",
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98ff787f",
+   "id": "6014757f",
    "metadata": {},
    "outputs": [],
    "source": []
